--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,3 +24,14 @@ a {
     background: black;
   }
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.auto-type {
+  color: aquamarine;
+}
